Fix date alignment

--- a/wordpress/wp-content/themes/knock-knock/assets/scss/_frontpage.scss
+++ b/wordpress/wp-content/themes/knock-knock/assets/scss/_frontpage.scss
@@ -22,8 +22,4 @@ ul {
   li:last-child {
     border-bottom: 0 !important;
   }
-
-  .date {
-    width: 35px;
-  }
 }
